--- a/src/css/style.css
+++ b/src/css/style.css
@@ -656,9 +656,13 @@ article iframe {
 }
 .user-author img {
   border-radius: 100rem;
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   object-fit: cover;
+}
+.user-author img:hover {
+  box-shadow: 0px 0px 10px 10px rgba(205, 199, 199, 0.1);
+  transition: 0.5s linear;
 }
 .user-icon {
   position: relative;
@@ -671,7 +675,7 @@ article iframe {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 .user-name {
   font-weight: 500;
@@ -808,4 +812,29 @@ article iframe {
 }
 .about-icons {
   margin: 20px 0px;
+}
+.form-signin-signup {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  padding: 50px 0px;
+  /* background-image: url(../images/24.jpeg);
+   */
+
+  /* background-color: #f8b195; */
+  /* position: absolute; */
+  /* height: 100vh; */
+  width: 400px;
+  /* color: white; */
+  border: 0.25px solid gray;
+  background-color: white;
+  border-radius: 10px;
+  /* height: 500px; */
+  box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.25);
+}
+.duy {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  background: linear-gradient(120deg, #2980b9, #8e44ad);
 }
